Added Facebook SDK

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</style>
 	</head>
 	<body>
-		
+
 		<script>
 		  window.fbAsyncInit = function() {
 		    FB.init({
@@ -26,7 +26,8 @@
 		     var js, fjs = d.getElementsByTagName(s)[0];
 		     if (d.getElementById(id)) {return;}
 		     js = d.createElement(s); js.id = id;
-		     js.src = "//connect.facebook.net/en_US/sdk.js";
+		     js.src = "https://connect.facebook.net/en_US/sdk.js";
+		     //js.src = "C:\Users\Vinesh Kannan\Documents\GitHub\agc-ipro/fb-sdk.js";
 		     fjs.parentNode.insertBefore(js, fjs);
 		   }(document, 'script', 'facebook-jssdk'));
 		</script>
