Reset index page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MobiHack</title>
+		<title>Intellectual Playground</title>
 		<link rel="stylesheet" type="text/css" href="style/reset.css">
 		<link rel="stylesheet" type="text/css" href="style/main.css">
 		<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
@@ -9,7 +9,6 @@
 		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Karla:400,700,400italic' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-		<link href='http://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple' rel='stylesheet' type='text/css'>
 		<style>
 
 
@@ -18,41 +17,12 @@
 
 	<body>
 
-		<center><div id="container">
-
-			<img src="style/smalllogo.png"><br>
-
-			<input type="text" id="roomKeyInput" value="">
-
-			<button onclick="globalStart();">Record</button>
-
-			<!--<button onclick="setRoomKey();">Join</button>
-			<button id="start" onclick="initListening(true);">Start</button>
-			<button id="stop" onclick="initListening(false);">Stop</button>
-			<button id="resuls" onclick="endSession();">Results</button>-->
-
-			<!--<input x-webkit-speech>-->
-			<div id="interim-transcript">
-				<p>transcription will be output here</p>
-			</div>
-
-			<button onclick="globalStop();">Stop</button>
-
-			<div id="output"></div>
-
-		</div></center>
-
-		
-		<!-- STACK SCRIPTS -->
-		<!-- Remeber that you have to load the stack backwards -->
-		<script type="text/javascript" src="script/backend.js"></script>
-		<script type="text/javascript" src="script/application.js"></script>
-		<script type="text/javascript" src="script/frontend.js"></script>
+			Intellectual Playground
 
 		<script type="text/javascript">
-	/*	setRoomKey();
-		endSession();*/
+
 			console.log("LOADED MAIN");
+
 		</script>
 		
 	</body>
