--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 		<title>Intellectual Playground</title>
 		<link rel="stylesheet" type="text/css" href="style/reset.css">
 		<link rel="stylesheet" type="text/css" href="style/main.css">
-		<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
+		<!--<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">-->
 		<!-- IMPORTED SCRIPTS -->
 		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Karla:400,700,400italic' rel='stylesheet' type='text/css'>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+		<!-- FULLPAGE.JS -->
+		<link rel="stylesheet" type="text/css" href="style/jquery.fullPage.css"/>
+		<script type="text/javascript" src="style/jquery.fullPage.js"></script>
 		<style>
 
 
@@ -17,9 +20,16 @@
 
 	<body>
 
-			Intellectual Playground
+		<div id="fullpage">
+			<div class="section">Intellectual Playground</div>
+			<div class="section">Illinois Tech</div>
+		</div>
 
 		<script type="text/javascript">
+
+			$(document).ready(function(){
+				$('#fullpage').fullpage();
+			});
 
 			console.log("LOADED MAIN");
 
