Added images directory

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<body>
 
 		<div id="fullpage">
-			<div class="section">Intellectual Playground</div>
+			<div class="section" id="logo">
+				<img src="style/img/logo-white.png">
+			</div>
 			<div class="section">Illinois Tech</div>
 		</div>
 
