--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style/main.css">
 		<!--<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">-->
 		<!-- IMPORTED SCRIPTS -->
-		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Karla:400,700,400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Arvo:400,700|Source+Sans+Pro:400,400italic,600' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<!-- FULLPAGE.JS -->
