Ready for splash page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
 
 		<div id="fullpage">
 			<div class="section" id="logo">
-				<img src="style/img/logo-white.png">
+				<center>
+					<img src="style/img/logo-white.png">
+				</center>
 			</div>
-			<div class="section">Illinois Tech</div>
+			<div class="section">
+				<h1>Launching 11.20.2015.</h1>
+				<p>Illinois Institute of Technology</p>
+			</div>
 		</div>
 
 		<script type="text/javascript">
