Switched to .min files

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<!-- FULLPAGE.JS -->
-		<link rel="stylesheet" type="text/css" href="style/jquery.fullPage.css"/>
-		<script type="text/javascript" src="style/jquery.fullPage.js"></script>
+		<link rel="stylesheet" type="text/css" href="style/fullpagestylemin.css"/>
+		<script type="text/javascript" src="style/fullpagescriptmin.js"></script>
 		<style>
 
 
