--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 				</center>
 			</div>
 			<div class="section">
-				<div id="aleins">
-					<img src="style/img/aliens/4">
-					<img src="style/img/aliens/7">
-					<img src="style/img/aliens/12">
+				<div id="aliens">
+					<center>
+						<img class="aliens" src="style/img/aliens/4.png">
+						<img class="aliens" src="style/img/aliens/7.png">
+						<img class="aliens" src="style/img/aliens/12.png">
+					</center>
 				</div>
 				<h1>Launching 11.20.2015.</h1>
 				<p>Illinois Institute of Technology</p>
