Styled aliens and text

--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
 					<img src="style/img/logo-white.png">
 				</center>
 			</div>
-			<div class="section">
-				<div id="aliens">
-					<center>
-						<img class="aliens" src="style/img/aliens/4.png">
-						<img class="aliens" src="style/img/aliens/7.png">
-						<img class="aliens" src="style/img/aliens/12.png">
-					</center>
-				</div>
+			<div class="section" id="aliens">
+				<center>
+					<img class="aliens" src="style/img/aliens/4.png">
+					<img class="aliens" src="style/img/aliens/7.png">
+					<img class="aliens" src="style/img/aliens/12.png">
+				</center>
 				<h1>Launching 11.20.2015.</h1>
 				<p>Illinois Institute of Technology</p>
+			</div>
+			<div class="section" id="contact">
+				<h1>Contact Us</h1>
+				<ul>
+					<li>Boyang Dong</li>
+					<li>Timothy Nguyen</li>
+					<li>Vinesh Kann</li>
+				</ul>
 			</div>
 		</div>
 
