Changed contacts to purple

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="style/fullpagestylemin.css"/>
 		<script type="text/javascript" src="style/fullpagescriptmin.js"></script>
 		<style>
-		
+
 
 
 		</style>
@@ -41,7 +41,7 @@
 				<ul>
 					<li>Boyang Dong</li>
 					<li>Timothy Nguyen</li>
-					<li>Vinesh Kann</li>
+					<li>Vinesh Kannan</li>
 				</ul>
 			</div>
 		</div>
