--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Intellectual Playground</title>
 		<link rel="stylesheet" type="text/css" href="style/reset.css">
 		<link rel="stylesheet" type="text/css" href="style/main.css">
+		<link rel="stylesheet" type="text/css" href="style/animate.min.css">
 		<!--<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">-->
 		<!-- IMPORTED SCRIPTS -->
 		<link href='https://fonts.googleapis.com/css?family=Arvo:400,700|Source+Sans+Pro:400,400italic,600' rel='stylesheet' type='text/css'>
@@ -22,15 +23,15 @@
 	<body>
 
 		<div id="fullpage">
-			<div class="section" id="logo">
+			<div class="section animated bounce" id="logo">
 				<center>
 					<img src="style/img/logo-white.png">
 				</center>
 			</div>
 			<div class="section" id="aliens">
 				<center>
-					<img class="alien" src="style/img/aliens/4.png">
-					<img class="alien" src="style/img/aliens/7.png">
+					<img class="alien animated wobble" src="style/img/aliens/4.png">
+					<img class="alien animated wobble infinite" src="style/img/aliens/7.png">
 					<img class="alien" src="style/img/aliens/12.png">
 				</center>
 				<h1>Launching 11.20.2015.</h1>
