Added problem frame, reduced text size

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
 				<h1>Launching 11.20.2015.</h1>
 				<p>Illinois Institute of Technology</p>
 			</div>
+			<div class="section" id="problem">
+				<h1>Framing the Problem</h1>
+				<ul>
+					<li>What factors are preventing parents from coming to AGC town hall meetings?</li>
+					<li>How might we boost students' confidence in learning about STEM topics in a fun and engaging way?</li>
+					<li>How can we offer activities suitable for a wide range of age groups and skill levels?</li>
+				</ul>
+			</div>
 			<div class="section" id="contact">
 				<h1>Contact Us</h1>
 				<ul>
