Added AGC background and iamge

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
 				<h1>Launching 11.20.2015.</h1>
 				<p>Illinois Institute of Technology</p>
 			</div>
+			<div class="section" id="agc">
+				<h1>About the Academy for Global Citizenship (AGC)</h1>
+				<p>AGC is a K-8 charter school in Chicago, Illinois. As an international baccalaureate program, the school strives to develop the whole child. AGC approached students at the Illinois Institute of Technology (IIT) with the STEM Education Innovation Challenge.</p>
+				<center>
+					<img class="spotlight" src="style/img/agc-wide-logo.jpg">
+				</center>
+				<p>This challenge tasked our team with creating creative STEM environments for students to learn in, while empowering AGC's dual English-Spanish community.</p>
+			</div>
 			<div class="section" id="problem">
 				<h1>Framing the Problem</h1>
 				<ul>
