--- a/index.html
+++ b/index.html
@@ -55,11 +55,32 @@
 			</div>
 			<div class="section" id="contact">
 				<h1>Contact Us</h1>
-				<ul>
-					<li>Boyang Dong</li>
-					<li>Timothy Nguyen</li>
-					<li>Vinesh Kannan</li>
-				</ul>
+				<h2>The Team</h2>
+				<center>
+					<div class="profile">
+						<img src="style/img/people/bobo.jpg">
+						<h3>Boyang Dong</h3>
+					</div>
+					<div class="profile">
+						<img src="style/img/people/tim.jpg">
+						<h3>Timothy Nguyen</h3>
+					</div>
+					<div class="profile">
+						<img src="style/img/people/vinesh.jpg">
+						<h3>Vinesh Kannan</h3>
+					</div>
+				</center>
+				<h2>Advisors</h2>
+				<center>
+					<div class="profile">
+						<img src="style/img/people/marilee.jpg">
+						<h3>Marilee Bowles-Carey</h3>
+					</div>
+					<div class="profile">
+						<img src="style/img/people/melissa.jpg">
+						<h3>Melissa Chaidez</h3>
+					</div>
+				</center>
 			</div>
 		</div>
 		<div class="section" id="lessions">
