Created mixin for photoCoverBar

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 					<h1>The Solution</h1>
 					<h2>Intellectual Playground</h2>
 					<p>The Intellectual Playground is an event that AGC can hold at the same time as its town hall meetings, providing childcare for families that attend as well as offering a fun, hands-on STEM learning experience. Each Intellectual Playground kit comes with manipulatives, tools, and lesson plans that can be combined for many different activities that introduce students at different grade and skill levels to STEM concepts.</p>
-					<!--<p>While most activities are not equivalent to coursework, they are designed to make students comfortable enough with a topic that they would have the confidence to enroll and succeed in a course about later on.</p>
-					<p>The Intellectual Playground design process is meant to be accessible to educators and parents alike so that an active parents organization like AGC's could also step in to create and lead sessions throughout the year or at home.</p>-->
 				</div>
+			</div>
+			<div class="section" id="solution-cont">
+				<p>While most activities are not equivalent to coursework, they are designed to make students comfortable enough with a topic that they would have the confidence to enroll and succeed in a course about later on.</p>
+				<p>The Intellectual Playground design process is meant to be accessible to educators and parents alike so that an active parents organization like AGC's could also step in to create and lead sessions throughout the year or at home.</p>
 			</div>
 			<div class="section" id="contact">
 				<h1>Contact Us</h1>
