--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 				</div>
 			</div>
 			<div class="section" id="solution-cont">
+				<h1>Boosting STEM Confidence</h1>
 				<p>While most activities are not equivalent to coursework, they are designed to make students comfortable enough with a topic that they would have the confidence to enroll and succeed in a course about later on.</p>
+				<h1>Accessible for Others to Build On</h1>
 				<p>The Intellectual Playground design process is meant to be accessible to educators and parents alike so that an active parents organization like AGC's could also step in to create and lead sessions throughout the year or at home.</p>
 			</div>
 			<div class="section" id="contact">
