Added parent narrative

--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@
 				<h1>Accessible for Others to Build On</h1>
 				<p>The Intellectual Playground design process is meant to be accessible to educators and parents alike so that an active parents organization like AGC's could also step in to create and lead sessions throughout the year or at home.</p>
 			</div>
+			<div class="section" id="imagine-users">
+				<h1>What kind of user might benefit from this?</h1>
+				<center>
+					<div class="profile">
+						<img src="style/img/people/rosa.png">
+						<h3>Rosa is an imagined parent.</h3>
+					</div>
+				</center>
+			</div>
+			<div class="section" id="user-narrative-1"></div>
+			<div class="section" id="user-narrative-2">
+				<div class="photo-cover">
+					<p>Rosa has three kids: John, Ernesto Jr, and Beatrice.</p>
+					<p>Rosa moved to Chicago from El Salvador 15 years ago, with her late husband Ernesto in hopes of becoming a licensed nurse.</p>
+					<p>Widowed, Rosa works full time at a restaurant while going to night school.</p>
+					<p>She wishes that she could take an active role in her children's school life, but feels there simply isn't enough time, or when there is time, she can't find affordable child care.</p>
+					<p>One day, Rosa hears from Julia (mother of a friend of Beatrice's) about an event AGC is hosting, "Intellectual Playground"</p>
+					<p>Julia tells Rosa that the event is a way for parents to get involved, and where the children can come as well.</p>
+					<p>Rosa brings her children to the Intellectual Playground.</p>
+					<p>As her children go into another room, Rosa realizes that this is the first time she has been to an event at the school.</p>
+					<p>The night passes by and Rosa feels not only welcomed, but also as if her voice was heard. She feels, happy.</p>
+					<p>Rosa picks up her children from the other room.</p>
+					<p>John, Ernesto Jr, and Beatrice are each holding a mask, they drew them themselves, they're aliens!</p>
+					<p>As the four walk back home, Emilia and John explain to their mom all about what they learned, Junior says he wants to become a doctor someday.</p>
+					<p>Beatrice runs around with her mask on, screaming "I'm an alien! Blargh!"</p>
+					<p>Rosa laughs. She is overcome with a blend of happiness, proudness, and accomplishment.</p>
+					<p>That night, after tucking her children into bed, Rosa frames the children's masks and hangs them on the wall.</p>
+				</div>
+			</div>
 			<div class="section" id="lessions">
 					<b><h1>Lessions We Learnt</h1></b>
 					<ul>
