--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 					<img class="alien animated wobble infinite" src="style/img/aliens/7.png">
 					<img class="alien" src="style/img/aliens/12.png">
 				</center>
-				<h1>Launching 11.25.2015.</h1>
-				<p>Illinois Institute of Technology</p>
+				<h1>Launched on 11.25.2015.</h1>
+				<p>with the Academy for Global Citizenship</p>
 			</div>
 			<div class="section" id="agc">
 				<h1>About the Academy for Global Citizenship (AGC)</h1>
@@ -66,6 +66,15 @@
 				<h1>Accessible for Others to Build On</h1>
 				<p>The Intellectual Playground design process is meant to be accessible to educators and parents alike so that an active parents organization like AGC's could also step in to create and lead sessions throughout the year or at home.</p>
 			</div>
+			<div class="section" id="process">
+				<h1>The Process</h1>
+				<ul>
+					<li>Choose a topic that lends itself to building things. Workshops have the most potential to engage students.</li>
+					<li>List all of the complex terminology related to the topic and translate it to kid-friendly terms.</li>
+					<li>Design manipulatives that would be versatile and fun to play with.</li>
+					<li>Create lesson plans for starter, main, and review activities. Starters should be accessible to kindergarten students.</li>
+				</ul>
+			</div>
 			<div class="section" id="imagine-users">
 				<h1>What kind of user might benefit from this?</h1>
 				<center>
@@ -74,6 +83,8 @@
 						<h3>Rosa is an imagined parent.</h3>
 					</div>
 				</center>
+			</div>
+			<div class="section" id="micropilot">
 			</div>
 			<div class="section" id="user-narrative-1"></div>
 			<div class="section" id="user-narrative-2">
