Change text align of ps

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<img class="alien" src="style/img/aliens/12.png">
 				</center>
 				<h1>Launched on 11.25.2015.</h1>
-				<p>with the Academy for Global Citizenship</p>
+				<p class="center">with the Academy for Global Citizenship</p>
 			</div>
 			<div class="section" id="agc">
 				<h1>About the Academy for Global Citizenship (AGC)</h1>
