Moved process section down

--- a/index.html
+++ b/index.html
@@ -66,15 +66,8 @@
 				<h1>Accessible for Others to Build On</h1>
 				<p>The Intellectual Playground design process is meant to be accessible to educators and parents alike so that an active parents organization like AGC's could also step in to create and lead sessions throughout the year or at home.</p>
 			</div>
-			<div class="section" id="process">
-				<h1>The Process</h1>
-				<ul>
-					<li>Choose a topic that lends itself to building things. Workshops have the most potential to engage students.</li>
-					<li>List all of the complex terminology related to the topic and translate it to kid-friendly terms.</li>
-					<li>Design manipulatives that would be versatile and fun to play with.</li>
-					<li>Create lesson plans for starter, main, and review activities. Starters should be accessible to kindergarten students.</li>
-				</ul>
-			</div>
+			<!--<div class="section" id="micropilot">
+			</div>-->
 			<div class="section" id="imagine-users">
 				<h1>What kind of user might benefit from this?</h1>
 				<center>
@@ -83,8 +76,6 @@
 						<h3>Rosa is an imagined parent.</h3>
 					</div>
 				</center>
-			</div>
-			<div class="section" id="micropilot">
 			</div>
 			<div class="section" id="user-narrative-1"></div>
 			<div class="section" id="user-narrative-2">
@@ -114,6 +105,16 @@
 					<p>This can not only help them preview the courses that they are about to take in the coming semester, like biology, but a way to let them work with younger students, like a "pair-up" after-class activity.</p>
 					<h2>3. Different Kinds of Activities </h2>
 					<p>The "Aliens Generation Factory" requires mentors to participate. Since the teacher and kids ratio is around 1:3 to 1:4, we might not have that many teachers who can stay that long at school with those kids.</p>
+			</div>
+			<div class="section" id="process">
+				<h1>The Process</h1>
+				<h2>How can I create my own Intellectual Playground event?</h2>
+				<ul>
+					<li>Choose a topic that lends itself to building things. Workshops have the most potential to engage students.</li>
+					<li>List all of the complex terminology related to the topic and translate it to kid-friendly terms.</li>
+					<li>Design manipulatives that would be versatile and fun to play with.</li>
+					<li>Create lesson plans for starter, main, and review activities. Starters should be accessible to kindergarten students.</li>
+				</ul>
 			</div>
 			<div class="section" id="contact">
 				<h1>Contact Us</h1>
