Added prototype styles

--- a/index.html
+++ b/index.html
@@ -66,8 +66,14 @@
 				<h1>Accessible for Others to Build On</h1>
 				<p>The Intellectual Playground design process is meant to be accessible to educators and parents alike so that an active parents organization like AGC's could also step in to create and lead sessions throughout the year or at home.</p>
 			</div>
-			<!--<div class="section" id="micropilot">
-			</div>-->
+			<div class="section" id="micropilot">
+				<h1>The Prototype</h1>
+				<h1>The Alien Factory</h1>
+				<p>Our team got to work with six AGC students on 11/25/2015 to test our example Intellectua Playground event: a series of games to teach concepts in genetics using aliens.</p>
+				<center>
+					<img class="spotlight" src="style/img/pilot/groups-mat.jpg">
+				</center>
+			</div>
 			<div class="section" id="imagine-users">
 				<h1>What kind of user might benefit from this?</h1>
 				<center>
