--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 			</div>
 			<div class="section" id="micropilot">
 				<h1>The Prototype</h1>
-				<h1>The Alien Factory</h1>
+				<h2>The Alien Factory</h2>
 				<p>Our team got to work with six AGC students on 11/25/2015 to test our example Intellectua Playground event: a series of games to teach concepts in genetics using aliens.</p>
 				<center>
-					<img class="spotlight" src="style/img/pilot/groups-mat.jpg">
+					<img class="photo" src="style/img/pilot/groups-mat.jpg">
 				</center>
 			</div>
 			<div class="section" id="imagine-users">
