Added Jen Moore Picture

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
 						<img src="style/img/people/melissa.jpg">
 						<h3>Melissa Chaidez</h3>
 					</div>
+					<div class="profile">
+						<img src="style/img/people/jen.png">
+						<h3>Jennifer Moore</h3>
+					</div>
 				</center>
 			</div>
 			<div class="section" id="thanks">
